feat: 루비 도트를 기본 강아지로 통합